--- a/Map Style.css
+++ b/Map Style.css
@@ -1,3 +1,21 @@
 ﻿body
 {
+    background-color: #bbf2be;
+    padding: 0;
+    margin: 0;
+}
+
+.header {
+    background-color: #0a7028;
+    margin-top: -21px;
+    padding-top: 6px;
+    padding-left: 5px;
+}
+
+.header h1 {
+
+}
+
+.header p {
+
 }
