Played with background CSS.

--- a/Login Style.css
+++ b/Login Style.css
@@ -1,6 +1,6 @@
 ﻿body {
-    background-color: #d1fafb;
-    background-image: url("Resources/grass bottom.png");
+    background-color: #c4e9d6;
+    background-image: url("Resources/grass-bottom-not-as-light.png");
     background-repeat: no-repeat;
     background-size: 1500px 800px;
     min-height: 500px;
