--- a/Login Style.css
+++ b/Login Style.css
@@ -34,6 +34,7 @@ h1 {
     margin-top: 75px;
     margin-left: 50px;
     font-size: 52px;
+    font-family: Rockwell, "Segoe UI Semibold", Verdana, sans-serif;
 }
 
 .continue h2 {
@@ -44,6 +45,7 @@ h1 {
     width: 50%;
 }
 
+/*Styling for "NEW GAME" section*/
 .newgame {
     float: right;
     width: 40%;
