--- a/Login Style.css
+++ b/Login Style.css
@@ -32,17 +32,32 @@ h1 {
 
 .continue h3 {
     margin-top: 75px;
-    margin-left: 50px;
+    margin-left: 75px;
+    padding-bottom: 25px;
     font-size: 52px;
-    font-family: Rockwell, "Segoe UI Semibold", Verdana, sans-serif;
+    font-family: Rockwell, 'Times New Roman', serif;
 }
 
 .continue h2 {
-    margin-left: 110px;
+    margin-left: 25%;
+    font-size: 22px;
+    font-weight: bolder;
+    font-family: 'Segoe UI Semibold', Verdana, Arial, sans-serif;
 }
 
 .continue input[type=text] {
-    width: 50%;
+    margin-right: 25%;
+    width: 65%;
+    height: 22px;
+    background-color: #ddfadd;
+}
+
+.continue button {
+    margin-left: 40%;
+    width: 20%;
+    height: 35px;
+    font-family: Verdana, Arial, sans-serif;
+    font-weight: bolder;
 }
 
 /*Styling for "NEW GAME" section*/
